# CF25D

./: README.md  fix_kernel.py  pyproject.toml
src/XCfunlib.egg-info/: PKG-INFO  SOURCES.txt
src/xclib/: CF25D_jax.py  CF25D_torch.py  CFXXD.py  cf25d_flax.py  numint_tools.py  numint_tools_jax.py  numint_tools_torch.py  pyscf_io.py
src/xclib/scf/: fix_kernel.py
src/xclib/tools/: loader.py  mn15_fit_io.py  pyscf_io.py
tests/: test_cf25d_flax.py  test_cf25d_jax.py  test_mn15_fit_io.py
